Made some changes to the slides

--- a/National-Parks-Slides.Rmd
+++ b/National-Parks-Slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "National Parks Slides"
+title: "Species of Concern in National Parks: Assessing Conservation Danger Across the United States"
 author: "John Oatney, Gwen Wooten, Tommy Fowler"
 date: "`r Sys.Date()`"
 output: ioslides_presentation
@@ -196,7 +196,6 @@ speciesnewabundance2 %>% group_by(Category) %>%
 ## How Often Are Species Assigned Each Conservation Status?
 
 ```{r include=FALSE}
-## John
 
 specieslargeviz <- speciesendanger %>% 
   filter(!is.na(Abundance)) %>% 
@@ -234,7 +233,7 @@ spc <- ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Cons
 spc
 ```
 
-## Level of Concern of Species in National Parks
+## How Much Concern Are Species Under?
 
 ```{r echo = FALSE, message = FALSE, warning = FALSE}
 graph2 <- speciesnew %>% 
@@ -308,7 +307,26 @@ geom_col(aes(y = reorder(Category, total), x=total, fill=`Conservation Status`),
 
 ```
 
-## Maps
+## How Are the Parks Doing?
+```{r echo = FALSE, message = FALSE, warning = FALSE}
+parksendanger <- speciesendanger %>% 
+  group_by(`Park Name`, `Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  pivot_wider(names_from = `Conservation Status`, values_from = count, values_fill = 0) %>% 
+  left_join(parks) %>% 
+  select(`Park Code`, `Park Name`, Acres, Endangered, `In Recovery`, `Species of Concern`, `Under Review`, Threatened, `Proposed Threatened`, Extinct, `Proposed Endangered`)
+
+# Size of park does not seem to be related to how many species of concern there are in the park!
+
+ggplot(parksendanger, aes(x = reorder(`Park Code`, Acres), y = Acres, fill = `Species of Concern`)) + 
+  geom_bar(stat = "identity") + 
+  theme(axis.text.x = element_text(angle = 90, size = 6)) + 
+  labs(x = "Park Code", y = "Park Size (Acres)", fill = "# Species of\nConcern") +
+  scale_fill_continuous(type = "viridis") + 
+  scale_y_continuous(labels = c(0, "2 mil.", "4 mil.", "6 mil.", "8 mil."))
+```
+
+## How Is Each State Doing?
 
 ```{r VIZ 6, include= FALSE}
 
