--- a/National-Parks-Report.Rmd
+++ b/National-Parks-Report.Rmd
@@ -234,7 +234,7 @@ Of all of the species that were assigned a conservation status, 83.4% of them we
 This poses a problem for our evaluation of concern, though, as we have no way of looking at the official categories in any meaningful way across the data set. To counter this issue, we wrangled the data and grouped these conservation status categories into two types: "Of Concern", composed of *Proposed Threatened, Threatened, Proposed Endangered, Endangered*, and *Species of Concern*; and "Not of Concern", composed of all NA values. The other categories, due to their small size and their lack of exact relation to either category, are ignored for considerations of concern.
 
 ## How Much Concern Are Species Under?
-Using our new binary category for conservation status, we can return to the categories from before. I HAVE NO IDEA WHAT TO SAY HERE
+Using our new binary category for conservation status, we can return to the categories from before. Because there are so many species of vascular plants represented in the national parks, it would be reasonable to assume that there would be a lot of vascular plant species of concern. With global warming and forest fires, trees are dying all over the globe. This graph shows that this is not the case, though!  
 
 ```{r echo = FALSE, message = FALSE, warning = FALSE}
 graph2 <- speciesnew %>% 
@@ -302,7 +302,11 @@ geom_col(aes(y = reorder(Category, total), x=total, fill=`Conservation Status`),
                                   face = "bold")) +
   theme(axis.title.x=element_text(colour="grey27", 
                                    face = "bold")) 
-```
+```  
+
+Vascular plants have a proportionally low number of species of concern. Now, there is another point to note on that subject, which is that almost none of the categories has a significant proportion of concern. This does not change, though, that the proportion is much lower than we had anticipated. Perhaps the tree planting and protection programs from the National Parks Service and the IUCN really are protecting the trees effectively in national parks.  
+
+The same cannot be said for birds in national parks. The proportion of birds of concern to birds not of concern is higher than in any other category. It is still rather low, but one must remember that this is counting number of *species*, and not number of *individuals*. There are hundreds of species of birds that are under conservation concern and need assistance.
 
 ## Appendix
 Here is all of the code used in this report.
